feat: implement stubs